--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
          body{
             height: 3000px;
+            width: 6000px;
          }
          .red{
             background: red;
@@ -15,15 +16,26 @@
          .yellow{
             background: yellow;
          }
+         
          .box{
-            border: 2px solid orangered;
+            border: 10px solid orangered;
             padding: 20px;
+            margin: 20px;
             width: 50%;
+            /* position: fixed;
+            bottom: 20px; */
          }
          .box2{
             border: 2px solid orangered;
             padding: 20px;
             width: 50%;
+         }
+         .test{
+            background: pink;
+            padding: 20px;
+         }
+         .span{
+            color: red;
          }
     </style>
     <title>jquery-1</title>
@@ -44,6 +56,8 @@
     <div class="box" id="first">
         <h1>Hello World</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, perspiciatis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, cupiditate!</p>
     </div>
     <div class="box2">
         <p>Lorem ipsum dolor sit.</p>
@@ -69,7 +83,7 @@
         //  $('ul li:gt(1)').css("color", "red");
         //  $('ul li:lt(2)').css("color", "red");
 
-        // mouse events 
+        // mouse events                                                     >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $('#but').click(function(){
         //     let a = $('.box').html()
@@ -131,7 +145,7 @@
         //     alert("window is resizeing")
         // })
 
-        // get methods
+        // get methods                                          >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $("#but").click(function(){
         //     let a = $('#first').text()
@@ -158,7 +172,7 @@
         //     alert(b)
         // })
 
-        // class methods
+        // class methods                                             >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $('#but').click(function(){
         //     $('h1').addClass('red yellow')
@@ -171,7 +185,7 @@
         //     $('h1').toggleClass('red')
         // })
 
-        // css methods
+        // css methods                                                       >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $('#but').click(function(){
         //     $('h1').css('background', 'red')
@@ -181,7 +195,7 @@
         //                 'color': 'white', 'display':'inline-block','padding': '10px','border-radius': '.5rem'})
         // })
 
-        // on methods
+        // on methods                                                            >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $('h1').on('mouseenter mouseout', function(){
         //     $(this).toggleClass("red")
@@ -207,7 +221,7 @@
         // })
 
 
-        // append, prepend, before and after methods
+        // append, prepend, before and after methods                               >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $('#but').click(function(){
         //     $('.box').append('<h2>Hello</h2>')
@@ -247,11 +261,94 @@
         //     $('<h1>Hello this is vijay</h1><p>I am a student and i am good at learnig new things</p>').appendTo(".box")
         // })
 
-        // clone() methods
+        // clone() methods                                            >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
         // $('#but').click(function(){
         //     $('.box h1').clone().prependTo('.box2')
         // })   
+
+        //replaceWith() & replaceAll()                                       >>>>>>>>>>>>>>>>>>>>>>
+
+        // $('#but').click(function(){
+        //     $('.box p:first').replaceWith('<h3>Hello</h3>')
+        // })
+        // $('#but').click(function(){
+        //     $('.box p:nth-child(3)').replaceWith('<h3>Hello</h3>')
+        // })
+        // $('#but').click(function(){
+        //     $('.box p').replaceWith('<h3>Hello</h3>')
+        // })
+        // $('#but').click(function(){
+        //     $('.box p').replaceWith('this is changed')
+        // })
+
+        // $('#but').click(function(){
+        //     $('<h3>hello</h3>').replaceAll('.box p:first')
+        // })
+
+        // wrap() & unwrap()                                                >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+        // $('#but').click(function(){
+        //     $('.box p').wrap('<div class="test"></div>')
+        // })
+        // $('#but').click(function(){
+        //     $('.box p').unwrap()
+        // })
+
+        // wrapAll & wrapInner                                           >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+        // $('#but').click(function(){
+        //     $('.box p').wrapAll("<div class='test'></div>")
+        // })
+
+        // $('#but').click(function(){
+        //     $('h1').wrapInner('<span class="span"></span>')
+        // })
+
+        // width() & height()                                           >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+        // $('#but').click(function(){
+        //     console.log('width set' + $('.box').width('500px'))
+        //     console.log('width : ' + $('.box').width())
+        //     console.log('innerWidth : ' + $('.box').innerWidth())
+        //     console.log('outerWidth : ' + $('.box').outerWidth())
+        //     console.log('outerWidth(true) : ' + $('.box').outerWidth(true))
+        // })
+        // $('#but').click(function(){
+        //     console.log('height set' + $('.box').height('500px'))
+        //     console.log('height : ' + $('.box').height())
+        //     console.log('innerHeight : ' + $('.box').innerHeight())
+        //     console.log('outerHeight : ' + $('.box').outerHeight())
+        //     console.log('outerHeight(true) : ' + $('.box').outerHeight(true))
+        // })
+
+        // position() & offset()                                              >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+        // $('#but').click(function(){
+        //     // console.log($('.box h1').position())
+        //     let x = $('.box h1').position();
+        //     console.log('top : ' + x.top + ' left : ' + x.left)
+        // })
+        // $('#but').click(function(){
+        //     // console.log($('.box h1').offset())
+        //     let y = $('.box h1').offset();
+        //     console.log('top : ' + y.top + ' left : ' + y.left)
+        //     // console.log($('.box h1').offset({top: 0, left: 0}))
+        // })
+
+
+        // scrollTop() & scrollLeft()                                              >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+        // $(window).scroll(function(){
+        //     $('.box').html("");
+        //     $('.box').append("top : " + $(window).scrollTop())
+        //     $('.box').append("<br>left : " + $(window).scrollLeft())
+        // })
+
+        // $('#but').click(function(){
+        //     $(window).scrollTop(400)
+        //     $(window).scrollLeft(500)
+        // })
     })
 </script>
 </html>
