--- a/index2.html
+++ b/index2.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        body{
+            width: 6000px;
+            height: 3000px;
+        }
+        *{
+            margin: 0;
+            padding: 0;
+        }
         .box{
             border: 2px solid red;
             padding: 20px;
             width: 50%;
             border-radius: .5rem;
+            position: fixed;
+            bottom: 30px;
+            margin: 20px;
+        }
+        .box h1{
+            margin: 0;
+            margin: 10px;
         }
     </style>
     <title>practice1</title>
@@ -27,6 +42,7 @@
     </nav>
     <div class="box">
         <h1>Hello World</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente amet ratione reprehenderit neque. Commodi quisquam excepturi delectus dolore exercitationem praesentium!</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda laboriosam ipsa placeat expedita impedit sint eligendi totam voluptates eum deserunt, illo quasi natus ipsam reiciendis dicta repellendus pariatur officiis ipsum!</p>
     </div>
     <form action="" class="form">
