jquery ancestor method

--- a/index2.html
+++ b/index2.html
@@ -31,6 +31,7 @@
 </head>
 <body>
     <button class="but">click me</button>
+    <button id="show">show</button>
     <nav>
         <ul class="lists">
             <li>Home</li>
