--- a/index3.html
+++ b/index3.html
@@ -59,6 +59,7 @@
     <button class="but">click me</button>
     <button class="show">show</button>
     <div class="box">
+        <a href="https://twitter.com" id="result">twitter</a>
         <p>Lorem ipsum dolor sit amet consectetur.</p>
         <p class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, magni!</p>
     </div>
