--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         // $('#show').click(function(){
         //     // $('.box').stop()
         //     // $('.box').stop(true)
-        //     $('.box').stop(true,true)
+        //     // $('.box').stop(true,true)
         // })
 
         // jQuery chaining method                                               >>>>>>>>>>>>>>>>K>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
