--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             /* position: fixed;
             bottom: 20px; */
          }
+         .box h1{
+            margin: 0;
+         }
          .box2{
             border: 2px solid orangered;
             padding: 20px;
